@@ -1,11 +1,11 @@
 {
   "name": "pypetroleumhandling",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "factorio_version": "0.17",
   "title": "Pyanodons Petroleum Handling",
   "author": "Pyanodon, Nexela, Kingarthur",
   "contact": "",
   "homepage": "https://forums.factorio.com/viewtopic.php?f=94&t=51490&sid=f5d85f769fccb0ac398bf4036f829064",
   "description": "Add new ways to get oil and their extraction, basic processing.",
-  "dependencies": ["pycoalprocessing >= 1.0.17", "pyfusionenergy >= 1.1.5", "stdlib >= 1.0.0", "(?)pyrawores >= 1.2.6", "(?) rso-mod" ]
+  "dependencies": ["pycoalprocessing >= 1.0.17" , "pyfusionenergy >= 1.1.5" , "pyindustry >= 1.2.0" , "stdlib >= 1.0.0" , "(?)pyrawores >= 1.2.6" , "(?) rso-mod" ]
 }
